<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Share.me</string>
    <string name="profile_button_title">P</string>
    <string name="friends_button_title">F</string>
    <string name="fa_profile">\uf007</string>
    <string name="fa_friends">\uf0c0</string>
    <string name="fa_create">\uf196</string>
    <string name="fa_list">\uf233</string>
    <string name="fa_info">\uf129</string>
    <string name="fa_settings">\uf013</string>
    <string name="fa_logOut">\uf08b</string>
    <string name="fa_back">\uf104</string>


    <string name="user_email">alex.rudovic@udg.edu.me</string>
    <string name="user_username">AlexXx</string>
    <string name="user_name">Alex</string>
    <string name="user_surname">Rudovic</string>
    <string name="user_city">Ulcinj</string>
    <string name="user_gender">Mail</string>
    <string name="user_tel">+38267977551</string>


    <string name="title_crossfade">Simple Crossfade</string>

    <string name="title_screen_slide">Screen Slide</string>
    <string name="title_zoom">Zoom</string>
    <string name="title_layout_changes">Layout Changes</string>
    <string name="title_template_step">Step <xliff:g id="step_number">%1$d</xliff:g>: Lorem
        Ipsum</string>


    <string name="action_toggle">Toggle indicator</string>
    <string name="action_add_item">Add item</string>
    <string name="action_remove_item">Remove item</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_finish">Finish</string>
    <string name="action_info">Photo info</string>
    <string name="action_photo">View photo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Welcome to Share.me</string>
    <string name="slide_1_desc">Do you have items that you share with people around you?</string>

    <string name="slide_2_title">Tell others !</string>
    <string name="slide_2_desc">Tell other users that you need particular item and create event..</string>

    <string name="slide_3_title">Time ?</string>
    <string name="slide_3_desc">Set the exact time of the start and end of your event..</string>

    <string name="slide_4_title">That simple !</string>
    <string name="slide_4_desc">Everybody uses what they need and everyone is happy!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>


</resources>
