<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.balsa.sharemev10.Profile_Activity"
    android:background="@color/bijela_pozadina">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/crvena_pozadina"
        android:gravity="top"
        android:orientation="horizontal"
        >


        <Button
            android:id="@+id/_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/providno"
            android:text="b" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:src="@drawable/small_logo_share_me_white" />

        <TextView
            android:id="@+id/profile_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="10dp"
            android:text="Alex Rudovic"
            android:textAppearance="?android:attr/textAppearanceLarge"

            />
    </LinearLayout>

  <TableLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="bottom"
      android:background="@drawable/slikapozadina"
      >

      <TableRow
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:weightSum="2"
          android:padding="@dimen/padding_profile_info"
          android:background="@drawable/border_gray"
          >


          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textAppearance="?android:attr/textAppearanceLarge"
              android:textColor="@color/profile_label"
              android:text="Email"
              android:id="@+id/textView3"
              android:layout_weight="1"
              />

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textAppearance="?android:attr/textAppearanceMedium"
              android:text="@string/user_email"
              android:textColor="@color/resultTitles"
              android:gravity="right"
              android:layout_weight="1"
              android:id="@+id/profil_email" />
      </TableRow>

      <TableRow
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:weightSum="2"
          android:padding="@dimen/padding_profile_info"
          android:background="@drawable/border_gray"
          >


          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textAppearance="?android:attr/textAppearanceLarge"
              android:textColor="@color/profile_label"
              android:text="Username"
              android:id="@+id/t111"
              android:layout_weight="1"
              />

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textAppearance="?android:attr/textAppearanceMedium"
              android:text="@string/user_username"
              android:textColor="@color/resultTitles"
              android:gravity="right"
              android:layout_weight="1"
              android:id="@+id/profil_username" />
      </TableRow>

      <TableRow
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:weightSum="2"
          android:padding="@dimen/padding_profile_info"
          android:background="@drawable/border_gray"
          >


          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textAppearance="?android:attr/textAppearanceLarge"
              android:textColor="@color/profile_label"
              android:text="Name"
              android:id="@+id/t1"
              android:layout_weight="1"
              />

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textAppearance="?android:attr/textAppearanceMedium"
              android:text="@string/user_name"
              android:textColor="@color/resultTitles"
              android:gravity="right"
              android:layout_weight="1"
              android:id="@+id/profil_name" />
      </TableRow>
      <TableRow
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:weightSum="2"
          android:padding="@dimen/padding_profile_info"
          android:background="@drawable/border_gray"
          >


          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textAppearance="?android:attr/textAppearanceLarge"
              android:textColor="@color/profile_label"
              android:text="Surname"
              android:id="@+id/t11"
              android:layout_weight="1"
              />

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textAppearance="?android:attr/textAppearanceMedium"
              android:text="@string/user_surname"
              android:textColor="@color/resultTitles"
              android:gravity="right"
              android:layout_weight="1"
              android:id="@+id/profil_surname" />
      </TableRow>

      <TableRow
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:weightSum="2"
          android:padding="@dimen/padding_profile_info"
          android:background="@drawable/border_gray"
          >


          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textAppearance="?android:attr/textAppearanceLarge"
              android:textColor="@color/profile_label"
              android:text="City"
              android:id="@+id/t1111"
              android:layout_weight="1"
              />

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textAppearance="?android:attr/textAppearanceMedium"
              android:text="@string/user_city"
              android:textColor="@color/resultTitles"
              android:gravity="right"
              android:layout_weight="1"
              android:id="@+id/profil_city" />
      </TableRow>
      <TableRow
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:weightSum="2"
          android:padding="@dimen/padding_profile_info"
          android:background="@drawable/border_gray"
          >


          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textAppearance="?android:attr/textAppearanceLarge"
              android:textColor="@color/profile_label"
              android:text="Gender"
              android:id="@+id/t11111"
              android:layout_weight="1"
              />

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textAppearance="?android:attr/textAppearanceMedium"
              android:text="@string/user_gender"
              android:textColor="@color/resultTitles"
              android:gravity="right"
              android:layout_weight="1"
              android:id="@+id/profil_gender" />
      </TableRow>

      <TableRow
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:weightSum="2"
          android:padding="@dimen/padding_profile_info"
          android:background="@drawable/border_gray"
          >


          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textAppearance="?android:attr/textAppearanceLarge"
              android:textColor="@color/profile_label"
              android:text="Tel"
              android:id="@+id/t111111"
              android:layout_weight="1"
              />

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textAppearance="?android:attr/textAppearanceMedium"
              android:text="@string/user_tel"
              android:textColor="@color/resultTitles"
              android:gravity="right"
              android:layout_weight="1"
              android:id="@+id/profil_tel" />
      </TableRow>


  </TableLayout>


</LinearLayout>
